Make sure first section text doesn't overflow.

--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ section {
 
 section:first-child {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   background-image: url('pics/field.jpg');
   background-size: cover;
   background-position: center center;
